[gd_scene load_steps=3 format=3 uid="uid://djprjmnww17r1"]

[ext_resource type="Theme" uid="uid://exgmmsg3rnfw" path="res://resources/default_theme.tres" id="1_0uvfs"]
[ext_resource type="Script" path="res://scripts/ui/message_popup_panel.gd" id="2_xhaq2"]

[node name="MessagePopupPanel" type="PopupPanel"]
auto_translate_mode = 1
initial_position = 1
size = Vector2i(608, 192)
visible = true
theme = ExtResource("1_0uvfs")
script = ExtResource("2_xhaq2")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
offset_left = 4.0
offset_top = 4.0
offset_right = 604.0
offset_bottom = 188.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12

[node name="ReviseContent" type="LineEdit" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Revise" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "修改"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Delete" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "删除"

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ReplayButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
text = "播放"
